0000004: Entrades de dades als forms de tasca emprant selects encadenats
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/branches/caib@9 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/css/common.css
+++ b/web/css/common.css
@@ -319,6 +319,30 @@ h3.titol-delegacio {
 	background-repeat: no-repeat;
 	background-position: 2px 6px;
 }
+h3.titol-variables-tascadef {
+	padding-left: 24px;
+	background-image: url(../img/page_white_stack.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
+h3.titol-documents-tascadef {
+	padding-left: 24px;
+	background-image: url(../img/page_white_stack.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
+h3.titol-signatures-tascadef {
+	padding-left: 24px;
+	background-image: url(../img/page_white_stack.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
+h3.titol-validacions-campdef {
+	padding-left: 24px;
+	background-image: url(../img/page_white_stack.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
 
 h4.titol-missatge {
 	padding: 0;
