Aplicar r25 a trunk. 0000029: Redirigir tasques entre dues dates
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/trunk@38 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/css/dropdown/themes/helium/icones.css
+++ b/web/css/dropdown/themes/helium/icones.css
@@ -65,3 +65,6 @@ ul.dropdown li.area-tipus a {
 ul.dropdown li.rols a {
 	background-image: url(images/user_suit.png);
 }
+ul.dropdown li.reassignar a {
+	background-image: url(images/user_go.png);
+}
