0000054: Sincronització d'usuaris mitjançant plugin de persones (corregit)
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/branches/caib-2.0.0@64 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/css/displaytag.css
+++ b/web/css/displaytag.css
@@ -205,7 +205,7 @@ span.pageBanner {
 	border-bottom: none;
 }
 span.pageLinks {
-	padding: 0 .4em .1em .4em;
+	padding: .4em;
 	border-top: none;
 	margin-bottom: 1em;
 }
