0000055: Desapareixen els caps introduits i no guardats al gentionar els registres (corregit)
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/branches/branch-2.0@73 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/css/common.css
+++ b/web/css/common.css
@@ -87,6 +87,15 @@ form.uniForm .estret {
 	padding: .8em;
 	color: #666;
 }
+.missatgesVermell {
+	background: #FFDFDF none repeat scroll 0 0;
+	border-color: #DFCDCD;
+	border-style: solid;
+	border-width: 1px 0;
+	margin: 0 0 1.5em;
+	padding: .8em;
+	color: #666;
+}
 .missatgesBlau {
 	background: #DCF0F6 none repeat scroll 0 0;
 	border-color: #AFD2DE;
