--- a/web/css/uni-form/uni-form.css
+++ b/web/css/uni-form/uni-form.css
@@ -119,7 +119,11 @@
 
 /* Messages */
 .uniForm #errorMsg{ background: #ffdfdf; border: 1px solid #df7d7d; border-width: 1px 0; margin: 0 0 1.5em 0; padding: 7px; }
-.uniForm .error{ background: #ffdfdf; border: 1px solid #df7d7d; border-width: 1px 0; }
+.uniForm .error{
+	background: #ffdfdf !important;
+	border: 1px solid #df7d7d;
+	border-width: 1px 0;
+}
 
   .uniForm #errorMsg dt, .uniForm #errorMsg h3{ margin: 0 0 .5em 0; font-size: 100%; line-height: 100%; font-weight: bold; }
   .uniForm #errorMsg dd{ margin: 0; padding: 0; }
@@ -148,7 +152,46 @@ YOU CAN VERY EASILY REVERT TO A GENERIC STYLE OF UNI-FORM. BEST OF LUCK...
 }
 
 .uniForm .staticField {
-	display: block;
+	display: inline;
 	margin-top: 4px;
 	color: #777;
+}
+
+
+/* Formularis de tasca */
+/*.tascaForm .buttonHolder {
+	background-color:#FF5F01;
+	margin-bottom:-7px;
+	padding:5px;
+	text-align: right; 
+	position: relative;
+	top: 5px;
+}*/
+.tascaForm .inlineLabels label, .tascaForm .inlineLabels .label {
+	width: 30%; /* <- Required property */
+	margin: .3em 2% 0 0; /* <- Required property */
+}
+.tascaForm .inlineLabels .textInput, .tascaForm .inlineLabels.fileUpload {
+	width: 60%; /* <- Required property */
+	margin-right: 10px;
+}
+.tascaForm .inlineLabels.selectInput, .tascaForm .inlineLabels select {
+	width: 60%; /* <- Required property */
+	margin-right: 10px;
+}
+.tascaForm .inlineLabels textarea {
+	width: 60%; /* <- Required property */
+	height: 12em;
+	margin-right: 10px;
+}
+.tascaForm .inlineLabels .formHint {
+	margin-top: 0;
+	margin-left: 32%;
+	font-size: 0.85em;
+	color: #777;
+	position: static;
+}
+.zebraForm .ctrlHolder:nth-child(2n + 1) {
+	border-bottom: none;
+	background-color: #f2f2f2;
 }
