--- a/web/css/uni-form/helium.uni-form.css
+++ b/web/css/uni-form/helium.uni-form.css
@@ -11,22 +11,31 @@
 }
 .uniForm .buttonHolder {
 	background-color: transparent;
-	padding: 0;
+	float:right;
+	padding:0 10px 0 0;
+}
+.uniForm .ctrlHolder{
+	float: left;
+	width: 98%;
+}
+.inlineLabels h3 {
+	float: left;
+	width: 97%;
 }
 .tascaForm .inlineLabels label, .tascaForm .inlineLabels .label {
 	width: 30%; /* <- Required property */
 	margin: .3em 2% 0 0; /* <- Required property */
 }
 .tascaForm .inlineLabels .textInput, .tascaForm .inlineLabels.fileUpload {
-	width: 63%; /* <- Required property */
+	width: 60%; /* <- Required property */
 	margin-right: 10px;
 }
 .tascaForm .inlineLabels.selectInput, .tascaForm .inlineLabels select {
-	width: 63%; /* <- Required property */
+	width: 60%; /* <- Required property */
 	margin-right: 10px;
 }
 .tascaForm .inlineLabels textarea {
-	width: 63%; /* <- Required property */
+	width: 60%; /* <- Required property */
 	height: 12em;
 	margin-right: 10px;
 }
@@ -43,7 +52,7 @@
 .uniForm ul.alt_termini li {
 	float: left;
 	margin-right: 3%;
-	width: 10%;
+	width: 20%;
 }
 .uniForm fieldset h3, .uniForm .inlineLabels h3 {
 	background-color: #e3e3e3;
@@ -55,7 +64,7 @@
 	padding: 0.6em 0.3em 0.3em 1em;
 }
 .uniForm .inlineLabels .multiField {
-	width: 63%; /* <- Required property */
+	width: 60%; /* <- Required property */
 	margin: 0 0 .3em 0;
 	float: left;
 }
