Automatització de la generació del ear per JBoss
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@133 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-ear/.settings/org.eclipse.wst.common.component
+++ b/helium-ear/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,8 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="helium-ear">
         <wb-resource deploy-path="/" source-path="/src/main/application"/>
-        <dependent-module archiveName="helium-webapp.war" deploy-path="/" handle="module:/resource/helium-webapp/helium-webapp">
+        <dependent-module archiveName="helium.war" deploy-path="/" handle="module:/resource/helium-webapp/helium-webapp">
+            <dependent-object>WebModule_1307098899093</dependent-object>
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
