-- Añadidas enumeraciones y dominios a nivel de tipo de expediente.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@139 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -23,8 +23,8 @@ html, body{
 	width: 185px;
 }
 #header #logo-wrapper #logo {
+	width: 185px;
 	height: 40px;
-	float: left;
 	font-family: Helvetica,Arial,sans-serif;
 	font-size: 250%;
 	font-weight: normal;
