--- a/helium-ear/.settings/org.eclipse.wst.common.component
+++ b/helium-ear/.settings/org.eclipse.wst.common.component
@@ -2,8 +2,7 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="helium-ear">
         <wb-resource deploy-path="/" source-path="/src/main/application"/>
-        <dependent-module archiveName="helium.war" deploy-path="/" handle="module:/resource/helium-webapp/helium-webapp">
-            <dependent-object>WebModule_1307098899093</dependent-object>
+        <dependent-module archiveName="helium-webapp.war" deploy-path="/" handle="module:/resource/helium-webapp/helium-webapp">
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
