mid: 0000130 msg: Dades errònies al enviar documents al portafirmes des d'un subprocés
mid: 0000131
msg: Millorar consultes avançades i afegir suport per a la generació d'informes

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@226 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/displaytag.css
+++ b/helium-webapp/src/main/webapp/css/displaytag.css
@@ -196,7 +196,7 @@ span.pdf {
 	background-image: url(../img/displaytag/ico_file_pdf.png);
 }
 
-span.pageBanner, span.pageLinks, span.nothingFound {
+span.pageBanner, span.pageLinks, span.nothingFound, div.exportLinks {
 	display: block;
 	background: #eee none repeat scroll 0 0;
 	border-color: #ccc;
@@ -214,6 +214,14 @@ span.pageLinks {
 	margin-bottom: 1em;
 }
 span.pageLinks a {
+	color: #7d9556;
+}
+
+div.exportLinks {
+	padding: .4em;
+	margin-bottom: 1em;
+}
+div.exportLinks a {
 	color: #7d9556;
 }
 
