--- a/helium-webapp/.settings/org.eclipse.wst.common.component
+++ b/helium-webapp/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="helium-webapp-2.2">
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/target/replace-dir/WEB-INF/web.xml"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <dependent-module archiveName="helium-core-2.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-core/helium-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
