mid: 0000158 msg: Errors de visualització en la pàgina de consultes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@271 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -123,6 +123,7 @@ html, body{
 	margin-right: 6px;
 }
 #header #page-title #filtre {
+	width: 220px;
 	float: right;
 	text-align: right;
 }
@@ -137,6 +138,7 @@ html, body{
 	background-repeat: no-repeat;*/
 }
 #header #page-title #filtre a {
+	float: right;
 	position: relative;
 	top: 5px;
 	left: 3px;
