--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -336,6 +336,12 @@ h3.titol-terminis {
 	background-repeat: no-repeat;
 	background-position: 2px 6px;
 }
+h3.titol-massiva {
+	padding-left: 24px;
+	background-image: url(../img/application_cascade.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
 h3.titol-delegacio {
 	padding-left: 24px;
 	background-image: url(../img/note_go.png);
@@ -363,6 +369,12 @@ h3.titol-signatures-tascadef {
 h3.titol-validacions-campdef {
 	padding-left: 24px;
 	background-image: url(../img/page_white_stack.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
+h3.titol-tasca-massiva {
+	padding-left: 24px;
+	background-image: url(../img/application_cascade.png);
 	background-repeat: no-repeat;
 	background-position: 2px 6px;
 }
