--- a/helium-webapp/.settings/org.eclipse.wst.common.component
+++ b/helium-webapp/.settings/org.eclipse.wst.common.component
@@ -5,7 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <dependent-module archiveName="helium-core-2.3.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-core/helium-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -26,5 +26,6 @@
         </dependent-module>
         <property name="java-output-path" value="/helium-webapp/target/classes"/>
         <property name="context-root" value="helium"/>
+        <property name="component.exclusion.patterns" value="META-INF/context.xml"/>
     </wb-module>
 </project-modules>
