--- a/helium-webapp/src/main/webapp/css/reset.css
+++ b/helium-webapp/src/main/webapp/css/reset.css
@@ -46,4 +46,10 @@ blockquote, q {
 	quotes: "" "";
 }
 
+table, tr#consTR{
+			cellpadding:4;
+			border-collapse: none;
+			border-spacing: 5px;
+}
+
 #ui-datepicker-div { display: none; }
