mid: 0000318 msg: Ocultar expedients a les consultes per tipus
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@525 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-ear/.settings/org.eclipse.wst.common.component
+++ b/helium-ear/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="helium-ear">
+    <wb-module deploy-name="helium-ear-2.4">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/application"/>
+        <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
         <dependent-module archiveName="helium-webapp-2.4.war" deploy-path="/" handle="module:/resource/helium-webapp/helium-webapp">
             <dependency-type>uses</dependency-type>
         </dependent-module>
