O.T. 37315.  Ordenació drag & drop de camps via ajax
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@537 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/displaytag.css
+++ b/helium-webapp/src/main/webapp/css/displaytag.css
@@ -1,3 +1,15 @@
+table.displaytag td.showDragHandle {
+    background-image: url(/helium/img/updown.png);
+    background-repeat: no-repeat;
+    background-position: left 3px; 
+    cursor: move;
+}
+
+table.displaytag tr.drag td {
+    color: yellow;
+    background-color: black;
+}
+
 table.displaytag {
 	border: 1px solid #ccc;
 	width: 100%;
