MANTIS_ID: 0000334 MSG: Retrocés d'expedients per tasques
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@571 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -409,3 +409,7 @@ p.aclaracio {
 .missatgesOk p, .missatgesInfo p, .missatgesWarn p, .missatgesError p, .missatgesComment p, .missatgesAturat p {
 	margin-bottom: 8px;
 }
+
+.right {
+	float:	right;
+}
