--- a/helium-webapp/src/main/webapp/css/displaytag.css
+++ b/helium-webapp/src/main/webapp/css/displaytag.css
@@ -252,3 +252,8 @@ table tr.over td {
 	background: #ffffcc;
 	cursor: pointer;
 }
+
+table.displaytag tbody tr.registre_a_retrocedir {
+	background: #ffffcc;
+	color: #666;
+}
