MantisID: 0000343 Missatge: execució d'accions massives
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@592 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -413,3 +413,8 @@ p.aclaracio {
 .right {
 	float:	right;
 }
+.mass {
+	width: 96% !important;
+	padding-left: 24px !important;
+	padding-right: 0px !important;
+}
