mid: 0000388 msg: Selecció d'entorn menu superior
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@656 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/dropdown/themes/helium/helium.css
+++ b/helium-webapp/src/main/webapp/css/dropdown/themes/helium/helium.css
@@ -58,7 +58,7 @@ ul.dropdown a:active	{ color: #4c4c4c; }
 ul.dropdown ul {
 	border: 1px solid #a1a1a1;
 	padding: 4px 0px;
-	width: 178px;
+	width: 132px;
 	background-color: white;
 }
 ul.dropdown ul li {
@@ -84,6 +84,9 @@ ul.dropdown li.dir > a {
 }
 
 /* -- Components override -- */
+.dropdown li.image  > ul.llista-entorns {
+	width: 400px;
+}
 
 ul.dropdown-horizontal ul *.dir {
 	padding-right: 15px;
