MID: 416, 417 MSG: A la consulta per tipus només es mostra l'últim element de les variables tipus registre. Afegir la reindexació d'expedients a la pestanya de eines de l'expedient, i a les accions massives
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@682 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -318,6 +318,12 @@ h3.titol-canvi-versio {
 	background-repeat: no-repeat;
 	background-position: 2px 6px;
 }
+h3.titol-reindexar {
+	padding-left: 24px;
+	background-image: url(../img/refresh.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
 h3.titol-documents-tasca {
 	padding-left: 24px;
 	background-image: url(../img/page_white_stack.png);
