mid: 433 msg: Filtratge per dades mal visualitzat a les consultes de disseny
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@713 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/uni-form/uni-form.css
+++ b/helium-webapp/src/main/webapp/css/uni-form/uni-form.css
@@ -94,8 +94,13 @@
       .uniForm .inlineLabels label,
       .uniForm .inlineLabels .label{ float: left; margin: .3em 2% 0 0; padding: 0; line-height: 1; position: relative; width: 32%; }
       
-      /* Float the input elements */
-      .uniForm .inlineLabels .textInput,
+      /* Float the input elements */ 
+      .uniForm .inlineLabels .inputText{
+      	float: none;
+      	width: 64%;
+      	margin: 0;
+      }
+	  .uniForm .inlineLabels .textInput,
       .uniForm .inlineLabels .fileUpload,
       .uniForm .inlineLabels .selectInput,
       .uniForm .inlineLabels select,
