--- a/helium-webapp/src/main/webapp/css/uni-form/default.uni-form.css
+++ b/helium-webapp/src/main/webapp/css/uni-form/default.uni-form.css
@@ -67,6 +67,7 @@
         .uniForm label small{ font-size: .75em; color: #777; }
         
       .uniForm .textInput,
+      .uniForm .inputText,
       .uniForm textarea    { padding: 2px 1px; border: 1px solid #aaa; background: #fff; }
       .uniForm textarea    { height: 12em; }
       .uniForm select      {}
