Modificacions fetes a la versió Helium 2.5.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@776 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/reset.css
+++ b/helium-webapp/src/main/webapp/css/reset.css
@@ -52,4 +52,4 @@ table, tr#consTR{
 			border-spacing: 5px;
 }
 
-#ui-datepicker-div { display: none; }
+#ui-datepicker-div { display: none; clip: auto; }
