--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -163,156 +163,113 @@ html, body{
 }
 #footer #copyright {
 	float: right;
-	margin-top: -11px;
+	/*margin-top: -11px;*/
 }
 #footer {
 	background-color: #f2f2f2;
 	border-top: 1px solid #dfdfdf;
 }
 
-#footerSlideContainer {
-	position: fixed;
-	bottom:40px;
-	width: 40%;
-	height: auto;
-	margin-left: 30%;
-	margin-right: 30%;
-	overflow-y: auto;
-	overflow-x: hidden;
-	padding-left: 8px;
-	display: none;
-	z-index: 5;
+.ui-progressbar-value {
+	background: #8DCB48 !important;
 }
 
-.footerSlideContent {
-	width: 100%;
-	background-color: #f2f2f2;
-	border: 1px solid #dfdfdf;
-	color: #4C4C4C;
-}
-	
-.footerSlideText {
-	padding: 15px 10px 15px 25px;
-}
-	
-.footerSlideText table {
-	width: 99%;
-	
-}
-	
-.footerSlideText table tr .td_texto{
-	width: 20%;
+.dialog-form-massive-bar {
+	position:fixed; 
+	font-family:arial;
+	font-size:1em;
+	border:0.05em solid black;
+	overflow:false;
+	background-color:#fff;
 }
 
-	
-.footerSlideText table tr .td_texto{
-	border-spacing: 0px;
+.ui-accordion-header {
+	height: 30px;
+	margin-top: 4px !important;
+	padding-top: 2px !important;
 }
 
-.footerSlideText table tr .td_barra{
-	width: 80%;
+.ui-accordion-content {
+	height: auto !important;
+	margin-bottom: 4px !important;
+	border-top: solid 1px #AAA !important;
 }
 
-.footerSlideText td{
-	vertical-align: middle;
+.plabel {
+	position: absolute;
+	left: 700px; 
 }
-	
-#pbar_total_massive_div {
-	margin-left: auto;
-	margin-right: auto;
-	width: 40%;
-	height: 11px;	
-}
-
-#pbar_total_massive_icon {
-	cursor: pointer;
-}
-	
-#pbar_total_massive_div table {
-	border-spacing: 0px;
-}
-
-#pbar_total_massive_table_bars {
-	width: 100%;
-}
-
-#pbar_total_massive_detail {
-	width: 100%;
-}
-
-#pbar_total_massive_detail {
-	border-spacing: 15px;
-	padding-bottom: 15px;
-}
-
-#pbar_total_massive_div table td {
-	vertical-align: middle;
-}
-	
-#pbar_total_massive_text {
-	text-align: right;
-	padding-right: 10px;
-	cursor: pointer;
-}
-	
-#pbar_total_massive {
-	margin-left: auto;
-	margin-right: auto;
-	height: 10px;
-	cursor: pointer;
-}
-
-#pbar_total_massive_icon {
-	padding-left: 10px;
-}
-
-#list_massive li {
-	padding: 0px;
-	cursor: pointer;
-}
-
-#list_massive li a{
-	border: 0px;
-}
-
-.pbar {
-	margin: 5px;
-}
-
-#div_progressBarMassiveDetail #main #push {
-	border-top: 0px;
-}
-
-.page-title-massiva {
-	background-color: #666;
-	height: 2em;
-	padding: 0.5em 0.8em;
-	clear: left;
-}
-
-.page-title-massiva h2 {
-	color: #848484;
-	font-family: Helvetica,Arial,sans-serif;
-	font-size: 146.5%;
-	font-weight: normal;
-	margin-top: 4px;
+.massiu-data {
+	width: 140px;
 	float: left;
+	padding-left: 25px;
+	padding-top: 5px;
+}
+.massiu-accio {
+	width: 395px;
+	float: left;
+	padding-top: 5px;
+}
+.massiu-progres {
+	width: 280px;
+	float: left;
+	margin: 5px;
+	height: 15px !important;
+}
+.massiu-expedient {
+	width: 550px;
+	padding: 2px 10px !important;
+}
+.massiu-estat {
+	width: 175px;
+	padding: 2px 10px !important;
+}
+.massiu-opcions {
+	width: 50px;
+	padding: 2px 10px !important;
+}
+.mass_exp_titol {
+	font-weight: bold;
+	background-color: 
 }
 
-.page-title-massiva h2 span {
-	color: white;
-	margin-right: 2px;
-}
-
-.dialog-form-massive-bar{
-        position:fixed; 
-	    font-family:arial;
-    	font-size:1em;
-    	border:0.05em solid black;
-    	overflow:false;
-    	background-color:#fff;
-}
-
-.pbar {
+#page-entorn-menu div.massives a {
+	background-image: url(../img/application_cascade.png);
+	padding-left: 32px;
+	background-repeat: no-repeat;
+	background-position: 10px 0;
+	color: #CCC;
+	text-decoration: none;
 	float: right;
+	height: 20px;
+}
+#page-entorn-menu div.massives {
+	padding-top: 8px;
+	float: right;
+	padding-right: 10px;
+}
+#accordio_massiva {
+	font-size: 12px !important;
+}
+
+/* Waiting icon */
+.wait {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+                url('../img/ajax-loader.gif') 
+                50% 50% 
+                no-repeat;
+}
+
+body.loading {
+    overflow: hidden;   
+}
+body.loading .wait {
+    display: block;
 }
