MID: 487 MSG: Agafar tasques de grup massivament
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@808 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -273,3 +273,14 @@ body.loading {
 body.loading .wait {
     display: block;
 }
+.objectsPerPage {
+	float:	right !important;
+}
+select.objectsPerPage {
+	width:	60px !important;
+	margin-left: 10px !important;
+}
+.opp-llista {
+	position: relative;
+	top: 100px;
+}
