MID: 490 MSG: L'aplicació no arranca al haver-hi timers que dónen error al reindexar l'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@811 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -280,7 +280,15 @@ select.objectsPerPage {
 	width:	60px !important;
 	margin-left: 10px !important;
 }
-.opp-llista {
+.opp-llista-gis {
 	position: relative;
 	top: 100px;
+}
+.opp-llista-mas {
+	position: relative;
+	top: 90px;
+}
+.opp-llista {
+	position: relative;
+	top: 66px;
 }
