MID: 494 i 495 MSG: Actualitzar versió d'expedients massivament al importar una nova definició de procés i Reassignar tasques massivament
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@815 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -292,3 +292,21 @@ select.objectsPerPage {
 	position: relative;
 	top: 66px;
 }
+.reamass {
+	position: relative !important;
+	height: 22px;
+/* 	box-sizing: border-box; */
+}
+.reamass img {
+	float: right;
+	right: 10px;
+	left: initial;
+	top: -19px;
+}
+.msg-error {
+	cursor: pointer;
+	color: red;
+}
+.msg-error:HOVER {
+	text-decoration: underline; 
+}
