MID: 517, 518 MSG: Error al accedir a les accions massives, 	Al llistar les execucions massives es queda el popup en blanc
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@840 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -187,6 +187,8 @@ html, body{
 	height: 30px;
 	margin-top: 4px !important;
 	padding-top: 2px !important;
+	overflow: hidden;
+	height: auto;
 }
 
 .ui-accordion-content {
