mid: 0000523 msg: Mostrar identificació de l'expedient al tramitar la tasca
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@853 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -237,6 +237,12 @@ h3.titol-tab {
     font-weight: bold;
     font-size: 16px;
 }
+h3.titol-expedient {
+	padding-left: 24px;
+	background-image: url(../img/folder.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
 h3.titol-info {
 	padding-left: 24px;
 	background-image: url(../img/information.png);
