--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -237,6 +237,12 @@ h3.titol-tab {
     font-weight: bold;
     font-size: 16px;
 }
+h3.titol-expedient {
+	padding-left: 24px;
+	background-image: url(../img/folder.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
 h3.titol-info {
 	padding-left: 24px;
 	background-image: url(../img/information.png);
@@ -424,3 +430,15 @@ p.aclaracio {
 	padding-left: 24px !important;
 	padding-right: 0px !important;
 }
+
+/* css for timepicker */
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
+.ui-timepicker-rtl{ direction: rtl; }
+.ui-timepicker-rtl dl { text-align: right; }
+.ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }
