--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -78,7 +78,7 @@ html, body{
 	border-bottom: 1px dotted #d4d4d4;
 	/* Original */
 	/* min-height: 2em; */
-	/* Versió ie6 */
+	/* VersiÃ³ ie6 */
 	height: 2em;
 }
 #header #page-entorn-title h2 {
@@ -161,8 +161,154 @@ html, body{
 #footer #version {
 	float: left;
 }
+#footer #copyright {
+	float: right;
+	/*margin-top: -11px;*/
+}
 #footer {
 	background-color: #f2f2f2;
 	border-top: 1px solid #dfdfdf;
-	text-align: right;
+}
+
+.ui-progressbar-value {
+	background: #8DCB48 !important;
+}
+
+.dialog-form-massive-bar {
+	position:fixed; 
+	font-family:arial;
+	font-size:1em;
+	border:0.05em solid black;
+	overflow:false;
+	background-color:#fff;
+}
+
+.ui-accordion-header {
+	height: 30px;
+	margin-top: 4px !important;
+	padding-top: 2px !important;
+	overflow: hidden;
+	height: auto;
+}
+
+.ui-accordion-content {
+	height: auto !important;
+	margin-bottom: 4px !important;
+	border-top: solid 1px #AAA !important;
+}
+
+.plabel {
+	position: absolute;
+	left: 700px; 
+}
+.massiu-data {
+	width: 140px;
+	float: left;
+	padding-left: 25px;
+	padding-top: 5px;
+}
+.massiu-accio {
+	width: 395px;
+	float: left;
+	padding-top: 5px;
+}
+.massiu-progres {
+	width: 280px;
+	float: left;
+	margin: 5px;
+	height: 15px !important;
+}
+.massiu-expedient {
+	width: 550px;
+	padding: 2px 10px !important;
+}
+.massiu-estat {
+	width: 175px;
+	padding: 2px 10px !important;
+}
+.massiu-opcions {
+	width: 50px;
+	padding: 2px 10px !important;
+}
+.mass_exp_titol {
+	font-weight: bold;
+	background-color: 
+}
+
+#page-entorn-menu div.massives a {
+	background-image: url(../img/application_cascade.png);
+	padding-left: 32px;
+	background-repeat: no-repeat;
+	background-position: 10px 0;
+	color: #CCC;
+	text-decoration: none;
+	float: right;
+	height: 20px;
+}
+#page-entorn-menu div.massives {
+	padding-top: 8px;
+	float: right;
+	padding-right: 10px;
+}
+#accordio_massiva {
+	font-size: 12px !important;
+}
+
+/* Waiting icon */
+.wait {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+                url('../img/ajax-loader.gif') 
+                50% 50% 
+                no-repeat;
+}
+
+body.loading {
+    overflow: hidden;   
+}
+body.loading .wait {
+    display: block;
+}
+.objectsPerPage {
+	float:	right !important;
+}
+select.objectsPerPage {
+	width:	60px !important;
+	margin-left: 10px !important;
+}
+.opp-llista-gis {
+	position: relative;
+	top: 100px;
+}
+.opp-llista-mas {
+	position: relative;
+	top: 90px;
+}
+.opp-llista {
+	position: relative;
+	top: 66px;
+}
+.reamass {
+	position: relative !important;
+	height: 22px;
+/* 	box-sizing: border-box; */
+}
+.reamass img {
+	float: right;
+	right: 10px;
+	left: initial;
+	top: -19px;
+}
+.msg-error {
+	cursor: pointer;
+	color: red;
+}
+.msg-error:HOVER {
+	text-decoration: underline; 
 }
