--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -234,7 +234,56 @@ html, body{
 	font-weight: bold;
 	background-color: 
 }
-
+.temps_fila {
+	width: 840px;
+	padding: 2px 10px !important;
+	border-bottom: solid 1px #CCCCCC;
+	overflow: auto;
+}
+.fila_titol {
+	background-color: #8DCB48;
+	border-bottom: 1px solid #666666;
+	padding-left: 20px;
+	font-weight: bold;
+	font-size: 12px;
+}
+.temps_col1 {
+	width: 200px;
+	float: left;
+	padding-left: 20px;
+	padding-top: 5px;
+	overflow: hidden;
+}
+.temps_col2 {
+	width: 100px;
+	float: left;
+	padding-left: 20px;
+	padding-top: 5px;
+	font-weight: bold;
+	overflow: hidden;
+}
+.temps_well {
+	background-color: #E6E6E6;
+    border: 1px solid #D3D3D3;
+    color: #555555;
+    font-weight: normal;
+    outline: medium none;
+    margin-top: 1px;
+    position: relative;
+    font-size: 11px;
+    line-height: 1.3;
+    list-style: none outside none;
+    border-radius: 4px;
+    overflow: auto;
+    width: 860px;
+}
+.temps_chart {
+	margin-top: 10px;
+	margin-left: 25px;
+	margin-bottom: 20px;
+	width: 800px;
+	height: 400px;
+}
 #page-entorn-menu div.massives a {
 	background-image: url(../img/application_cascade.png);
 	padding-left: 32px;
@@ -246,6 +295,21 @@ html, body{
 	height: 20px;
 }
 #page-entorn-menu div.massives {
+	padding-top: 8px;
+	float: right;
+	padding-right: 10px;
+}
+#page-entorn-menu div.temps a {
+	background-image: url(../img/clock_red.png);
+	padding-left: 32px;
+	background-repeat: no-repeat;
+	background-position: 10px 0;
+	color: #CCC;
+	text-decoration: none;
+	float: right;
+	height: 20px;
+}
+#page-entorn-menu div.temps {
 	padding-top: 8px;
 	float: right;
 	padding-right: 10px;
@@ -293,6 +357,10 @@ select.objectsPerPage {
 .opp-llista {
 	position: relative;
 	top: 66px;
+}
+.opp-llista-tipus {
+	position: relative;
+	top: 50px;
 }
 .reamass {
 	position: relative !important;
