MID: 541 MSG: Bucle infinito al producirse un error en la ejecución de un timer.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@889 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -231,6 +231,11 @@ form.accio-titol {
 	margin: 2px 0 0 4px;
 }
 
+button.right {
+	float: right;
+	margin: 20px 0 20px 4px;
+}
+
 h3.titol-tab {
 	padding: 8px 0 12px 0;
     color: #666;
