--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -235,7 +235,7 @@ html, body{
 	background-color: 
 }
 .temps_fila {
-	width: 840px;
+	width: 940px;
 	padding: 2px 10px !important;
 	border-bottom: solid 1px #CCCCCC;
 	overflow: auto;
@@ -247,15 +247,22 @@ html, body{
 	font-weight: bold;
 	font-size: 12px;
 }
+.temps_col0 {
+	width: 20px;
+	float: left;
+	padding-left: 0px;
+	padding-top: 5px;
+	overflow: hidden;
+}
 .temps_col1 {
-	width: 200px;
+	width: 220px;
 	float: left;
 	padding-left: 20px;
 	padding-top: 5px;
 	overflow: hidden;
 }
 .temps_col2 {
-	width: 100px;
+	width: 90px;
 	float: left;
 	padding-left: 20px;
 	padding-top: 5px;
@@ -270,19 +277,28 @@ html, body{
     outline: medium none;
     margin-top: 1px;
     position: relative;
-    font-size: 11px;
+    font-size: 10px;
     line-height: 1.3;
     list-style: none outside none;
     border-radius: 4px;
     overflow: auto;
-    width: 860px;
+    width: 960px;
 }
 .temps_chart {
 	margin-top: 10px;
 	margin-left: 25px;
 	margin-bottom: 20px;
-	width: 800px;
+	width: 700px;
 	height: 400px;
+	float: left;
+}
+.temps_legend {
+	margin-top: 10px;
+	margin-left: 25px;
+	margin-bottom: 20px;
+	width: 200px;
+	height: 400px;
+	float: left;
 }
 #page-entorn-menu div.massives a {
 	background-image: url(../img/application_cascade.png);
