MID: 559 MSG: Añadir un monitor de recursos sobre los hilos en ejecución, memoria disponible, tiempo de CPU, ...
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@919 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -254,6 +254,13 @@ html, body{
 	padding-top: 5px;
 	overflow: hidden;
 }
+.monitor_col1 {
+	width: 480px;
+	float: left;
+	padding-left: 20px;
+	padding-top: 5px;
+	overflow: hidden;
+}
 .temps_col1 {
 	width: 220px;
 	float: left;
@@ -362,7 +369,24 @@ ul#temps_tabnav a:hover {
 	float: right;
 	height: 20px;
 }
+#page-entorn-menu div.monitor a {
+	background-image: url(../img/terminal.png);
+	padding-left: 35px;
+	background-repeat: no-repeat;
+	background-position: 10px 0;
+	color: #CCC;
+	text-decoration: none;
+	float: right;
+	height: 20px;
+	padding-top: 2px;
+	margin-top: -2px;
+}
 #page-entorn-menu div.temps {
+	padding-top: 8px;
+	float: right;
+	padding-right: 10px;
+}
+#page-entorn-menu div.monitor {
 	padding-top: 8px;
 	float: right;
 	padding-right: 10px;
