--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -78,7 +78,7 @@ html, body{
 	border-bottom: 1px dotted #d4d4d4;
 	/* Original */
 	/* min-height: 2em; */
-	/* VersiÃ³ ie6 */
+	/* VersiÃƒÂ³ ie6 */
 	height: 2em;
 }
 #header #page-entorn-title h2 {
@@ -234,7 +234,116 @@ html, body{
 	font-weight: bold;
 	background-color: 
 }
-
+.temps_fila {
+	width: 940px;
+	padding: 2px 10px !important;
+	border-bottom: solid 1px #CCCCCC;
+	overflow: auto;
+}
+.fila_titol {
+	background-color: #8DCB48;
+	border-bottom: 1px solid #666666;
+	padding-left: 20px;
+	font-weight: bold;
+	font-size: 12px;
+}
+.temps_col0 {
+	width: 20px;
+	float: left;
+	padding-left: 0px;
+	padding-top: 5px;
+	overflow: hidden;
+}
+.monitor_col1 {
+	width: 480px;
+	float: left;
+	padding-left: 20px;
+	padding-top: 5px;
+	overflow: hidden;
+}
+.temps_col1 {
+	width: 220px;
+	float: left;
+	padding-left: 20px;
+	padding-top: 5px;
+	overflow: hidden;
+}
+.temps_col2 {
+	width: 90px;
+	float: left;
+	padding-left: 20px;
+	padding-top: 5px;
+	font-weight: bold;
+	overflow: hidden;
+}
+.temps_well {
+	background-color: #E6E6E6;
+    border: 1px solid #D3D3D3;
+    color: #555555;
+    font-weight: normal;
+    outline: medium none;
+    margin-top: 1px;
+    position: relative;
+    font-size: 10px;
+    line-height: 1.3;
+    list-style: none outside none;
+    border-radius: 4px;
+    overflow: auto;
+    width: 960px;
+}
+.temps_chart {
+	margin-top: 10px;
+	margin-left: 25px;
+	margin-bottom: 20px;
+	width: 700px;
+	height: 400px;
+	float: left;
+}
+.temps_legend {
+	margin-top: 10px;
+	margin-left: 25px;
+	margin-bottom: 20px;
+	width: 200px;
+	height: 400px;
+	float: left;
+}
+ul#temps_tabnav {
+	list-style-type: none;
+	padding: 0 0 24px 6px;
+	border-bottom: 1px solid #aaa;
+	margin: 5px 0 8px 0;
+	font-size: 11px;
+}
+ul#temps_tabnav li {
+	float: left;
+	height: 21px;
+	background-color: #f2f2f2;
+	margin: 2px 2px 0 2px;
+	border: 1px solid #aaa;
+}
+ul#temps_tabnav li.active {
+	border-bottom: 1px solid #fff;
+	background-color: #fff;
+	font-weight: bold;
+	color: #666;
+}
+ul#temps_tabnav a {
+	float: left;
+	display: block;
+	color: #999;
+	text-decoration: none;
+	padding: 4px 10px;
+}
+ul#temps_tabnav span {
+	float: left;
+	display: block;
+	text-decoration: none;
+	padding: 4px 10px;
+}
+ul#temps_tabnav a:hover {
+	background: #fff;
+	color: #666;
+}
 #page-entorn-menu div.massives a {
 	background-image: url(../img/application_cascade.png);
 	padding-left: 32px;
@@ -246,6 +355,38 @@ html, body{
 	height: 20px;
 }
 #page-entorn-menu div.massives {
+	padding-top: 8px;
+	float: right;
+	padding-right: 10px;
+}
+#page-entorn-menu div.temps a {
+	background-image: url(../img/clock_red.png);
+	padding-left: 32px;
+	background-repeat: no-repeat;
+	background-position: 10px 0;
+	color: #CCC;
+	text-decoration: none;
+	float: right;
+	height: 20px;
+}
+#page-entorn-menu div.monitor a {
+	background-image: url(../img/terminal.png);
+	padding-left: 35px;
+	background-repeat: no-repeat;
+	background-position: 10px 0;
+	color: #CCC;
+	text-decoration: none;
+	float: right;
+	height: 20px;
+	padding-top: 2px;
+	margin-top: -2px;
+}
+#page-entorn-menu div.temps {
+	padding-top: 8px;
+	float: right;
+	padding-right: 10px;
+}
+#page-entorn-menu div.monitor {
 	padding-top: 8px;
 	float: right;
 	padding-right: 10px;
@@ -293,6 +434,10 @@ select.objectsPerPage {
 .opp-llista {
 	position: relative;
 	top: 66px;
+}
+.opp-llista-tipus {
+	position: relative;
+	top: 50px;
 }
 .reamass {
 	position: relative !important;
