MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@926 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -78,7 +78,7 @@ html, body{
 	border-bottom: 1px dotted #d4d4d4;
 	/* Original */
 	/* min-height: 2em; */
-	/* VersiÃƒÂ³ ie6 */
+	/* Versio ie6 */
 	height: 2em;
 }
 #header #page-entorn-title h2 {
