MID: 558 MSG: Reestructurar informació de estadística de temps
MID: 570
MSG: Error visualització llistat de tasques pendents

MID: 571
MSG: Afegir estadístiques a la pantalla d'inici i a la retroacció

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@933 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -304,7 +304,7 @@ html, body{
 	margin-left: 25px;
 	margin-bottom: 20px;
 	width: 200px;
-	height: 400px;
+/* 	height: 400px; */
 	float: left;
 }
 ul#temps_tabnav {
