--- a/helium-webapp/src/main/webapp/css/datepicker.css
+++ b/helium-webapp/src/main/webapp/css/datepicker.css
@@ -8,7 +8,7 @@
  *
  */
 .datepicker {
-  padding: 4px;
+/*   padding: 4px; */
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
