MID: 576 MSG: Afegir pàgina amb tasques pendents de finalitzar
MID: 573
MSG: Actualització de documentació a versió 2.6

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@945 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/dropdown/themes/helium/helium.css
+++ b/helium-webapp/src/main/webapp/css/dropdown/themes/helium/helium.css
@@ -87,6 +87,9 @@ ul.dropdown li.dir > a {
 .dropdown li.image  > ul.llista-entorns {
 	width: 400px;
 }
+.dropdown li.image  > ul.mesures {
+	width: 230px;
+}
 
 ul.dropdown-horizontal ul *.dir {
 	padding-right: 15px;
@@ -128,4 +131,3 @@ ul#menu-entorn ul a:link,
 ul#menu-entorn ul a:visited	{ color: #4c4c4c; text-decoration: none; }
 ul#menu-entorn ul a:hover	{ color: #4c4c4c; text-decoration: underline; }
 ul#menu-entorn ul a:active	{ color: #4c4c4c; }
-
