MID: 494 MSG: Reassignar tasques massivament
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@983 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/layout.css
+++ b/helium-webapp/src/main/webapp/css/layout.css
@@ -460,3 +460,9 @@ select.objectsPerPage {
 .ocult {
 	display: none;
 }
+.reduit  select {
+	width: 62% !important;
+}
+.reduit  input {
+	width: 62% !important;
+}
