MID: 528. MSG: Merge de la branca 2.6 MID: 629. MSG: Error al canviar d'estat en el node enter del primer node MID: 628. MSG: Visualitzar informació dominis WS MID: 627. MSG: Revisar validació de formulari amb VALANG MID: 626. MSG: Jasper reports consultes per tipus MID: 625. MSG: Guardar informació dominis WS MID: 624. MSG: Desplegar tasques actives dels expedients MID: 623. MSG: La tasca ha de tenir un link per a la seva tramitació ordinària MID: 619. MSG: Les tasques finalitzen però apareix un missatge d'error
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1059 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/commonV3.css
+++ b/helium-webapp/src/main/webapp/css/commonV3.css
@@ -120,6 +120,8 @@ td {
     font-size: 0.85em;
     margin-top: 0;
     position: static;
+    float: left;
+    width: 100%;
 }
 
 .missatge {
@@ -257,11 +259,23 @@ ul#tabnav li.warn a {
   display: none;
 }
 
+.well_mod {	
+    border: 1px solid #E3E3E3;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    min-height: 20px;
+    padding: 19px;
+}
+
 .form-tasca .fila_reducida {
 	margin-bottom: 0px !important;
 	margin-top: 0px !important;
 	padding-bottom: 10px;
     padding-top: 10px;
+}
+
+.form-tasca .fila_reducida label {
+	display: inline !important;
 }
 
 .form-tasca .fila_reducida:nth-child(2n+1) {
@@ -270,4 +284,38 @@ ul#tabnav li.warn a {
 
 #formFinalitzar {
 	margin: 0px;
+}
+
+.btn_under_taulaDades {
+	margin-top: -35px;	
+}
+
+#formConsultar .botonera {
+	margin-top: 20px;
+}
+
+.table-pendents {
+	width: 100%;
+}
+
+.tr-pendents td {
+	background-color: #FFFFFF !important;
+}
+
+.tr-pendents th, .tr-pendents td {
+	padding: 10px 10px 25px;
+	font-size: 12px;
+}
+
+.tr-pendents th {
+	background-image: repeating-radial-gradient(at center top , #EDEDED, #EDEDED);
+}	
+
+.table-pendents th, .table-pendents td {
+	padding-top: 4px;
+	padding-bottom: 4px;
+}
+.table-pendents th {
+	background-color: #B8B8B8;
+    background-repeat: repeat-x;
 }
