MID: 528. MSG: Merge de la branca 2.6 MID: 634. MSG: Problemes lentitud migració expedients a helium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1078 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/commonV3.css
+++ b/helium-webapp/src/main/webapp/css/commonV3.css
@@ -319,3 +319,8 @@ ul#tabnav li.warn a {
 	background-color: #B8B8B8;
     background-repeat: repeat-x;
 }
+
+#tramitacioMassivaBtn {
+	margin-left: 25px;	
+}
+
