MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1082 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/commonV3.css
+++ b/helium-webapp/src/main/webapp/css/commonV3.css
@@ -324,3 +324,9 @@ ul#tabnav li.warn a {
 	margin-left: 25px;	
 }
 
+.formRelacioDelete {
+	float: left;
+    margin-bottom: 0;
+    margin-right: 10px;
+    margin-top: 0;
+}
