MID: 638. MSG: Ejecutar acciones masivas para todos los expedientes sin seleccionarlos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1091 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -13,6 +13,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+.right {
+	float: right;
+}
+
 #content h2 {
     padding: 0 0 1.4em 0;
     color: black;
